[package]
name = "icommit"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Generate commit message using AI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
hyper = { version = "0.14.24", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
hyper-tls = "0.5.0"
serde_json = "1.0.94"
serde = { version = "1.0.153", features = ["derive"] }
dialoguer = "0.10.3"
ansi_term = "0.12.1"
xshell = "0.2.3"
anyhow = "1.0.69"